# django-workflow-engine

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  settings.py  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: CODEOWNERS
.github/workflows/: docs.yml  test.yml
config/: settings.py  urls.py
django_workflow/: __init__.py  apps.py  dataclass.py  exceptions.py  executor.py  models.py  urls.py  views.py
django_workflow/framework/: __init__.py  dataclass.py  executor.py
django_workflow/framework/tasks/: send_email.py  task.py
django_workflow/migrations/: 0001_initial.py
django_workflow/templates/django_workflow/: flow_detail.html  flow_form.html  flow_list.html
django_workflow/templates/includes/: requirement_summary.html
django_workflow/tests/: test_django.py
django_workflow_engine/: __init__.py  apps.py  dataclass.py  exceptions.py  executor.py  export.py  forms.py  generate_urls.py  import_bpmn.py  models.py  urls.py  utils.py  views.py
django_workflow_engine/management/commands/: cleanup_workflow_engine.py  import_bpmn_file.py
django_workflow_engine/migrations/: 0001_initial.py  0002_alter_flow_workflow_name.py  0003_taskrecord_broke_flow.py  0004_auto_20211116_0823.py  0005_rename_finished_at_taskrecord_executed_at.py  0006_taskrecord_done.py  0007_flow_running.py  0008_remove_taskrecord_broke_flow.py  0009_rename_taskrecord_taskrecordexecution_and_create_new_taskstatus.py  0010_create_replacement_task_record.py  0011_migrate_from_taskrecordexecutions.py  0012_alter_target_unique_together.py
django_workflow_engine/tasks/: __init__.py  email_form.py  previous_tasks_complete.py  send_email.py  task.py
django_workflow_engine/templates/django_workflow/: flow-continue.html
django_workflow_engine/tests/: factories.py  tasks.py  test_bpmn.py  test_creation.py  test_django.py  test_import_bpmn.py  test_parallel.py  test_reminder.py  test_task_info.py  test_workflow.py  utils.py  workflows.py
docs/: .pages  index.md  publishing.md  structure.md
example_project/: Makefile  README.md  example_workflow.py  pyproject.toml
example_project/example/: settings.py  urls.py
example_project/fixtures/: test_users.json
example_project/scripts/: run.sh
example_project/workflow/: __init__.py  forms.py  tasks.py  urls.py  views.py  workflows.py
example_project/workflow/migrations/: 0001_data_migration_with_all_models.py  0002_data_migration_with_all_models.py
example_project/workflow/templates/workflow/: base.html  home.html  list_flows.html
import_bpmn/: apps.py  import_bpmn.py
js/: tablesort.js
publishing/: index.html
scripts/: publish.sh
search/: search_index.json
structure/: index.html
(+26 files in other folders)
