[tool.poetry]
name = "django-workflow-engine"
version = "0.2.1"
description = ""
authors = [
    "Cameron Lamb <cameron.lamb@digital.trade.gov.uk>",
    "Ross Miller <ross.miller@digital.trade.gov.uk>",
]
license = "MIT"
readme = "docs/index.md"
packages = [{ include = "django_workflow_engine" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"
tox = "^4.4.6"

[tool.poetry.group.utils]
optional = true

[tool.poetry.group.utils.dependencies]
isort = "*"
flake8 = "*"
black = "*"
mypy = "*"
django-stubs = "*"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.1.5"
mkdocs-minify-plugin = "^0.6.4"
mkdocs-redirects = "^1.2.0"
mkdocstrings-python = "^0.9.0"
pillow = ">=9.5,<11.0"
cairosvg = "^2.7.0"
mkdocs-tech-docs-template = "^0.0.25"
mkdocs-awesome-pages-plugin = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
