[tool.poetry]
name = "django_workflow_engine_example_project"
version = "0.2.2"
description = ""
authors = [
    "Sam Dudley <samuel.dudley@digital.trade.gov.uk>",
    "Cam Lamb <cameron.lamb@digital.trade.gov.uk>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.16"
django-workflow-engine = { path = "../", develop = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
